testsuite/tests/linear/should_fail/LinearGADTNewtype.stderr

LinearGADTNewtype.hs:3:4: error:
    • A newtype constructor must be linear
    • In the definition of data constructor ‘A’
      In the newtype declaration for ‘A’
